# mechanistic_interpretability_o_20260311_190115_579ac26d

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/appendix/: appendix.tex
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
papers/: README.md
papers/pages/2302.04761/: 2302.04761_toolformer_llm_use_tools_manifest.txt
papers/pages/2304.14997/: 2304.14997_automated_circuit_discovery_acdc_manifest.txt
results/: main_selection_results.json  perturbation_results.json  positional_bias_results.json
results/positional_analysis/: positional_bias_stats.json  stability_by_category.csv
results/probing_analysis/: hidden_states.npy  last_hidden_states.npy  mean_hidden_states.npy  probing_results.json  prompts_labels.json  prompts_metadata.json
results/semantic_analysis/: per_category_semantic.csv  semantic_comparison.csv  semantic_metrics.json  sim_predictions.json
src/: create_dataset.py  generate_figures.py  llm_experiments.py  positional_analysis.py  probing_analysis.py  probing_analysis_v2.py  semantic_analysis.py  visualization.py
(+5 files in other folders)
